--- a/trunk/Info.plist
+++ b/trunk/Info.plist
@@ -6,6 +6,8 @@
 	<string>English</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
+	<key>CFBundleIconFile</key>
+	<string>CrabBattle</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.googlecode.crab-battle</string>
 	<key>CFBundleInfoDictionaryVersion</key>
